Issue 25: Fix FindBugs Issues. (Milan)